# dance_of_the_planets

./: .gitignore  .travis.yml  README.md  index.html
bs/: README.md  bsconfig.json  build.sh  index.html  package-lock.json  package.json  setup.sh
csharp/: Dance.Designer.cs  Dance.cs  Program.cs  README.md
exceljs/: README.md
fsharp_avalonia/: Program.fs  README.md  fsharp_avalonia.fsproj
gas_slide/: README.md  dance.gs
gauche-scheme/: README.md  dance.scm  run.sh
golang/: README.md  dance.go  go.mod  go.sum
gtk-fortran/: Makefile  README.md  dance.f90
haskell/: DanceOfThePlanets.cabal  README.md  setup.sh
ios_swift/: Package.swift  README.md
ipycanvas/: DanceOfThePlanets.ipynb  README.md  docker-compose.yml
java/: README.md  build.gradle
js/: dance.js
kotlin_android/: README.md  settings.gradle
kotlinjs/: README.md  build.gradle  settings.gradle
lablgtk/: .travis-ocaml.sh  Makefile  README.md  setup-opam  setup.sh
labltk/: .travis-ocaml.sh  Makefile  README.md  setup-opam  setup.sh
libgd_c/: Dockerfile  Makefile  README.md  docker-compose.yml  setup.sh
ocaml/: .gitignore  .travis-ocaml.sh  Makefile  README.md  setup-opam  setup.sh
perl/: README.md  Vagrantfile  dance.pl
python/: README.md  coverage.md  dance.py  run.sh  setup.sh
r/: README.md  dance.r
ruby2d/: README.md  dance.rb
rust/: Cargo.toml  Dockerfile  README.md  Vagrantfile  docker-compose.yml  setup.sh
rust/src/: dance.rs
scalajs/: README.md  build.sbt  index-dev.html  setup.sh
scratch/: dance_of_the_planets.sb3
threejs/: README.md  dance.html  (+1 more)
(+39 files in other folders)
