[package]
name = "drawing_sample"
version = "0.1.0"
authors = ["Takashi Masuyama <mamewotoko@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = "0.9.2"
gdk = "0.13.2"
gio = "0.9.1"
cairo-rs = "0.9.1"

[[bin]]
name = "dance"
path = "src/dance.rs"
